--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^1.0.2-beta.48",
     "vue": "^3.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
+    "less": "^4.1.1",
     "vite": "^2.3.7"
   }
 }
