--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "element-plus": "^1.0.2-beta.48",
     "vue": "^3.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
+    "eslint": "^7.29.0",
+    "eslint-plugin-vue": "^7.11.1",
     "less": "^4.1.1",
+    "less-loader": "^10.0.0",
     "vite": "^2.3.7"
   }
 }
