--- a/package.json
+++ b/package.json
@@ -8,20 +8,28 @@
   "dependencies": {
     "axios": "^0.21.1",
     "element-plus": "^1.0.2-beta.48",
-    "vue": "^3.0.5"
+    "qs": "^6.10.1",
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.10",
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
     "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^7.11.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.0",
-    "vite": "^2.3.7"
+    "prettier": "^2.3.1",
+    "vite": "^2.3.7",
+    "vite-plugin-html": "^2.0.7"
   }
 }
