--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "element-plus": "^1.0.2-beta.48",
+    "js-sha256": "^0.9.0",
     "qs": "^6.10.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
