--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "echarts": "^5.1.2",
     "element-plus": "^1.0.2-beta.48",
     "js-sha256": "^0.9.0",
     "qs": "^6.10.1",
